--- a/app/interfaces/templates/login.html
+++ b/app/interfaces/templates/login.html
@@ -6,19 +6,22 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
 {% endblock %}
 
-{% block navbar %}{% endblock %}
+{% block navbar %}
+<!-- Navbar simple para auth -->
+<nav class="auth-navbar">
+    <div class="container">
+        <a href="{{ url_for('viewpages.home') }}" class="auth-nav-brand">
+            <i class="fab fa-whatsapp"></i> Prontoa
+        </a>
+    </div>
+</nav>
+{% endblock %}
 
 {% block content %}
 <div class="auth-container">
     <div class="auth-background">
         <!-- Header con logo -->
         <div class="auth-header">
-            <div class="brand">
-                <div class="brand-icon">
-                    <i class="fab fa-whatsapp"></i>
-                </div>
-                <span class="brand-text">Prontoa!</span>
-            </div>
         </div>
 
         <!-- Formulario de login -->
