--- a/app/interfaces/templates/dashboard.html
+++ b/app/interfaces/templates/dashboard.html
@@ -25,6 +25,10 @@
                 <i class="fas fa-chart-line"></i>
                 <span>Dashboard</span>
             </a>
+            <a href="{{ url_for('viewpages.kpis') }}" class="menu-item">
+                <i class="fas fa-chart-bar"></i>
+                <span>KPIs</span>
+            </a>
             <a href="{{ url_for('viewpages.profile') }}" class="menu-item">
                 <i class="fas fa-user"></i>
                 <span>Perfil</span>
